--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+html
+  height: 100%
+  overflow-y: hidden
+body
+  margin: 0
+  font-family: "Franklin Gothic Medium"
+  height: 100%
+  background: #f8f8f8
